--- a/site/index.html
+++ b/site/index.html
@@ -1,36 +1,29 @@
-{% extends 'layouts/base.html' %}
+---
+layout: landing
+title: Aron Griffis
+---
 
-{% block bodytag %}
-<body class="landing">
-{% endblock bodytag %}
+<div class="photo">
+    <img src="/img/gravatar/perkins-cove/bright400.jpg" />
+</div>
 
-{% block nav %}{% endblock nav %}
+<header class="header" role="header">
+    <h1><span class="first-name">Aron</span> <span class="last-name">Griffis</span></h1>
+</header>
 
-{% block content %}
-    <div class="photo">
-        <img src="/img/gravatar/perkins-cove/bright400.jpg" />
-    </div>
+<article class="content">
+    <p>I'm a freelance software developer in the Boston area,
+        specializing in web applications powered by
+        <a href="http://python.org">Python</a> and
+        <a href="http://djangoproject.com">Django</a>.
+        I have <a href="resume/resume-AronGriffis.pdf">15&nbsp;years full-stack experience</a>
+        and I love my work. I can help you with your project;
+        <a href="mailto:aron@arongriffis.com">drop me a line</a>
+        and let's talk about&nbsp;it.</p>
 
-    <header class="header" role="header">
-        <h1><span class="first-name">Aron</span> <span class="last-name">Griffis</span></h1>
-    </header>
+    <p>I also <a href="blog">blog occasionally</a>.</p>
+</article>
 
-    <article class="content">
-        <p>I'm a freelance software developer in the Boston area,
-            specializing in web applications powered by
-            <a href="http://python.org">Python</a> and
-            <a href="http://djangoproject.com">Django</a>.
-            I have <a href="resume/resume-AronGriffis.pdf">15&nbsp;years full-stack experience</a>
-            and I love my work. I can help you with your project;
-            <a href="mailto:aron@arongriffis.com">drop me a line</a>
-            and let's talk about&nbsp;it.</p>
-
-        <p>I also <a href="blog">blog occasionally</a>.</p>
-    </article>
-
-    <div class="copyright">
-        Copyright &copy; 2011-2014 Aron Griffis
-    </div>
-{% endblock content %}
-
-{% block footer %}{% endblock footer %}
+<div class="copyright">
+    Copyright &copy; 2011-2014 Aron Griffis
+</div>
