remove distracting links to python/django

--- a/site/index.html
+++ b/site/index.html
@@ -13,9 +13,7 @@ title: Aron Griffis
 
 <article class="content">
     <p>I'm a freelance software developer in the Boston area,
-        specializing in web applications powered by
-        <a href="http://python.org">Python</a> and
-        <a href="http://djangoproject.com">Django</a>.
+        specializing in web applications powered by Python and Django.
         I have <a href="resume/resume-AronGriffis.pdf">15&nbsp;years full-stack experience</a>
         and I love my work. I can help you with your project;
         <a href="mailto:aron@arongriffis.com">drop me a line</a>
