retina symbol, for what it's worth...

--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Aron Griffis
 subtitle:
 body_class: landing
-logo_link: /wave.html
+#logo_link: /wave.html
 ---
 
 <h2 class="content-top">Hi, I’m Aron</h2>
