add a period to the greeting

--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@ body_class: landing
 #logo_link: /wave.html
 ---
 
-<h2 class="content-top">Hi, I’m Aron</h2>
+<h2 class="content-top">Hi, I’m Aron.</h2>
 
 {% capture markdown_intro %}
 I’m a software developer based in Providence, RI. I work with my wife at
