add link from top-level to wave post

--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 ---
 title: Aron Griffis
 body_class: landing
-#logo_link: /wave.html
+logo_link: /2016/09/06/atari-basic.html
 ---
 
 <h2 class="content-top">Hi, I’m Aron.</h2>
