kill old blog index, redirect to front page

--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,8 @@
 title: Aron Griffis
 body_class: landing
 logo_link: /2016/09/06/atari-basic.html
+redirect_from:
+  - /blog/index.html
 ---
 
 <h2 class="content-top">Hi, I’m Aron.</h2>
