repair resume redirect from relative to absolute

--- a/site/resume/index.html
+++ b/site/resume/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Refresh" content="0;url=resume-AronGriffis.pdf" />
+        <meta http-equiv="Refresh" content="0;url=/resume/resume-AronGriffis.pdf" />
     </head>
     <body>
         <p>
-            Look <a href="resume-AronGriffis.pdf">here</a>
+            Look <a href="/resume/resume-AronGriffis.pdf">here</a>
         </p>
     </body>
 </html>
