tweak front page text

--- a/site/index.html
+++ b/site/index.html
@@ -9,12 +9,12 @@ redirect_from:
 <h2 class="content-top">Hi, I’m Aron.</h2>
 
 {% capture markdown_intro %}
-I’m a software developer based in Providence, RI. I work with my wife at
+I’m a software developer based in Providence, RI. I work at
 [Scampersand](http://scampersand.com/) building modern web applications for
 clients.
 
 I’m a [Pythonista](https://www.python.org/) and a
-[Djangonaut](https://www.djangoproject.com/). Lately I’ve been enjoying working
+[Djangonaut](https://www.djangoproject.com/). Lately I’ve been using
 with [django-allauth](http://www.intenct.nl/projects/django-allauth/) and
 [django-rest-framework](http://www.django-rest-framework.org/) to build OAuth
 and API-powered sites. I’m a big fan of [twelve-factor
@@ -32,7 +32,7 @@ and I was one of the founding developers of the [Gentoo
 Linux](https://gentoo.org/) distribution.
 
 In the corner of my office there’s a stack of frisbees and my cleats. Nothing
-pulls me from my desk more quickly than an offer to toss a disc, and on summer
+gets my attention more quickly than an offer to toss a disc, and on summer
 evenings you’ll find me out on the field grinning like a maniac as I’m [cutting,
 marking, hucking and
 bidding](http://ultimatefrisbeehq.com/ultimate-frisbee-terms) with [my ultimate
