--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@ clients.
 
 I’m a [Pythonista](https://www.python.org/) and a
 [Djangonaut](https://www.djangoproject.com/). Lately I’ve been using
-with [django-allauth](http://www.intenct.nl/projects/django-allauth/) and
+[django-allauth](http://www.intenct.nl/projects/django-allauth/) and
 [django-rest-framework](http://www.django-rest-framework.org/) to build OAuth
 and API-powered sites. I’m a big fan of [twelve-factor
 apps](http://12factor.net/), well-tested code, and using
