--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@ redirect_from:
 <h2 class="content-top">Hi, I’m Aron.</h2>
 
 {% capture markdown_intro %}
-I’m a software developer based in Providence, RI. I work at
+I’m a software developer based in Ann Arbor, Michigan. I work at
 [Scampersand](http://scampersand.com/) building modern web applications for
 clients.
 
